RESOLVED FIXED38366
Web Inspector: Missing INSPECTOR Guard in Console::lastWMLErrorMessage
https://bugs.webkit.org/show_bug.cgi?id=38366
Summary Web Inspector: Missing INSPECTOR Guard in Console::lastWMLErrorMessage
Joseph Pecoraro
Reported 2010-04-29 19:03:10 PDT
Attachments
[PATCH] Proposed Fix 1: Remove Function if !ENABLE(INSPECTOR) (2.05 KB, patch)
2010-04-29 19:09 PDT, Joseph Pecoraro
no flags
[PATCH] Proposed Fix 2: Leave Function but always return "" if !ENABLE(INSPECTOR) (1.32 KB, patch)
2010-04-29 19:10 PDT, Joseph Pecoraro
timothy: review+
joepeck: commit-queue-
Joseph Pecoraro
Comment 1 2010-04-29 19:09:41 PDT
Created attachment 54771 [details] [PATCH] Proposed Fix 1: Remove Function if !ENABLE(INSPECTOR) Remove console.lastWMLErrorMessage altogether if INSPECTOR is not enabled.
Joseph Pecoraro
Comment 2 2010-04-29 19:10:43 PDT
Created attachment 54772 [details] [PATCH] Proposed Fix 2: Leave Function but always return "" if !ENABLE(INSPECTOR) Leave console.lastWMLErrorMessage but make it non functional unless INSPECTOR is enabled.
Joseph Pecoraro
Comment 3 2010-04-29 19:14:22 PDT
I think this is a weird scenario. Its weird that you can have a WML only function that only works whether or not the Inspector is enabled or not. I think the best current solution would be Proposed Fix 2, so that authors can always rely on console.lastWMLErrorMessage to exist, and not require checking for its existence first. Can anyone who uses WML comment on its usefulness?
Ryan Zhu
Comment 4 2010-04-29 19:51:23 PDT
Prefer on proposed fix 2. Thanks
Joseph Pecoraro
Comment 5 2010-04-30 20:09:50 PDT
Committed r58628 M WebCore/ChangeLog M WebCore/page/Console.cpp r58628 = ab352d24008dbb4223c36159bbece5527d0645c8 (refs/remotes/trunk) http://trac.webkit.org/changeset/58628
Note You need to log in before you can comment on or make changes to this bug.