2010-04-30  Joseph Pecoraro  <joepeck@webkit.org>

Reviewed by Timothy Hatcher.

        Web Inspector: Missing INSPECTOR Guard in Console::lastWMLErrorMessage
        https://bugs.webkit.org/show_bug.cgi?id=38366

        Console::lastWMLErrorMessage is only available if WML is enabled, however
        its implementation only makes sense as long as INSPECTOR is enabled
        as well. So this adds the ENABLE(INSPECTOR) guard in the function. A
        browser without ENABLE(INSPECTOR) will always get an empty result.

        * page/Console.cpp:

Canonical link: https://commits.webkit.org/49883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58628 268f45cc-cd09-0410-ab3c-d52691b4dbfc