WebCore/page/Console.cpp
@@ -289,6 +289,7 @@ void Console::markTimeline(ScriptCallStack* callStack)
 #if ENABLE(WML)
 String Console::lastWMLErrorMessage() const
 {
+#if ENABLE(INSPECTOR)
     Page* page = this->page();
     if (!page)
         return String();
@@ -307,7 +308,7 @@ String Console::lastWMLErrorMessage() const
 
         return message->message();
     }
-
+#endif
     return String();
 }
 #endif
